<resources>
    <string name="app_name">FATSCUP</string>

    <!--Formulario 5 -->
    <string name="mensaje1">¿Deseas agregar un nucleo familiar?</string>
    <string name="mensaje2">Este formulario te permite agregar toda la información de la vivienda, para
        conocer con exactitud los datos de la familia y hogar.</string>
    <string name="mensaje5">1. Si en la vivienda habitan otro nucleo familiar, puede agregarlo al finalizar
    el formulario, en donde te desplegara una alerta con la opcion de acerlo.</string>

    <string name="mensaje6">2. Al final del formulario te aparesera la descripcion de los datos dilegenciados por el encuestador</string>

    <string name="mensaje3">No por ahora</string>
    <string name="mensaje4">Agregar</string>


    <!--Formulario Vista 7 -->
    <string name="mensaje1_VistaFormVII">¡Bienvenido!</string>
    <string name="mensaje2_VistaFormVII">Estas proximo a ingresar un grupo</string>
    <string name="mensaje3_VistaFormVII">Agregar un grupo</string>
    <string name="title_activity_vista_form_nueve">VistaFormNueve</string>
</resources>
