<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.fascup.com.fascup.FormVActivity"
    android:background="#084658">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:gravity="center"
                    android:text="@string/mensaje1"
                    android:textColor="#ffffff"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="400dp"
                    android:layout_height="460dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/grupofamiliarformv" />

                <LinearLayout
                    android:layout_width="400sp"
                    android:layout_height="100sp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje2"
                        android:textSize="18sp"
                        android:textColor="#fff"
                        android:textStyle="normal"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btn_regresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_btn_primary"
                    android:layout_margin="10dp"
                    android:text="@string/mensaje3"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:onClick="onClick"/>

                <Button
                    android:id="@+id/btn_agregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_btn_primary"
                    android:text="@string/mensaje4"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:onClick="onClick"/>
            </LinearLayout>


        </LinearLayout>



    </ScrollView>
</RelativeLayout>
