<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.fascup.com.fascup.FormVActivity"
    android:background="#084658">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mensaje1_VistaFormVII"
                    android:textColor="#ffffff"
                    android:textSize="45dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mensaje2_VistaFormVII"
                    android:textColor="#ffffff"
                    android:textSize="28dp" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="familiar."
                    android:textColor="#ffffff"
                    android:textSize="28dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="400dp"
                    android:layout_height="460dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    app:srcCompat="@drawable/grupofamiliarformv" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/btn_agregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_btn_primary"
                    android:text="@string/mensaje3_VistaFormVII"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:onClick="onClick"/>
            </LinearLayout>


        </LinearLayout>



    </ScrollView>
</RelativeLayout>

