<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.fascup.com.fascup.VistaFormII"
    android:background="#00bcd4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="400sp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Genial!"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:layout_marginBottom="16dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje2"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:textStyle="normal"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje5"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:layout_marginTop="16dp"
                        android:textStyle="normal"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje6"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:layout_marginTop="16dp"
                        android:textStyle="normal"/>



                </LinearLayout>


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="500dp"
                    android:layout_height="460dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/vistaidentificacionvivienda" />


            </LinearLayout>

        </LinearLayout>



    </ScrollView>
</RelativeLayout>
